# zymi-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
adr/: 0001-rust-core-extraction.md  0002-yaml-config-layer.md  0003-dag-execution-plan.md  0004-llm-provider-architecture.md  0005-python-as-event-driven-components.md  0006-pyo3-bridge-design.md  0007-python-tool-decorator.md  0008-cli-architecture.md  0009-webhook-approval-handler.md  0010-services-layer.md  0011-pipeline-execution-engine.md  0012-cross-process-event-delivery.md  0013-target-runtime-architecture.md  0014-declarative-custom-tools.md  0015-persistent-shell-session.md  0016-context-window-management.md  0017-observability-tui-and-cli-restructure.md  0018-idempotent-fork-resume.md  0019-evals-as-yaml-datasets.md  0020-declarative-extension-surface.md  0021-generic-http-connectors-and-plugin-protocol.md  0022-event-sourced-approvals.md  0023-mcp-client-integration.md  0024-deterministic-tool-steps.md  0025-python-tools-load-time-validation.md  0026-zymi-serve-multi-pipeline.md  0027-deterministic-tool-step-fail-fast.md  0028-conditional-dag-edges.md  0029-routed-output-any-of.md  0030-events-cli-wal-visibility.md  0031-step-context-mode-fresh.md  0032-install-ux-fetch.md  0033-mcp-server-pipelines-as-tools.md  0034-mcp-observability-tools.md  0035-hash-chain-verification.md  0036-file-contract-secret-deny-and-path-normalization.md  0037-telegram-approval-webhook-hardening.md  0038-fork-resume-tool-step-output.md  0039-http-tool-template-escaping.md  0040-hash-covers-sequence-and-stream-heads.md  (+2 more)
assets/scaffold/default/: project.yml
assets/scaffold/default/agents/: default.yml
assets/scaffold/default/pipelines/: main.yml
assets/scaffold/shared/: AGENTS.md  pyproject.toml  web_scrape.yml  web_search.yml
assets/scaffold/telegram/: .env.example  project.yml
assets/scaffold/telegram/agents/: assistant.yml  reviewer.yml
assets/scaffold/telegram/pipelines/: chat.yml
assets/scaffold/telegram/tools/: broadcast.yml  get_weather.py  translate.py
docs/: agents.md  approvals.md  cli.md  connectors.md  context.md  events-and-replay.md  getting-started.md  pipelines.md  project-yaml.md  python-api.md  store-backends.md  tools.md
examples/: mcp_probe.rs  seed_observe.rs
examples/mcp/: README.md
examples/mcp/filesystem/: .gitignore  README.md  project.yml
examples/mcp/filesystem/agents/: default.yml
examples/mcp/filesystem/pipelines/: main.yml
examples/mcp/filesystem/sandbox/: README.md
ops/: .mcp.json  README.md  project.yml
ops/pipelines/: release.yml
ops/scripts/: bump.py
ops/tools/: bump_manifests.yml  check_clean.yml  commit_release.yml  run_checks.yml  tag_and_push.yml
src/: approval.rs  commands.rs  lib.rs  policy.rs  reasoning.rs  types.rs  webhook.rs
src/cli/: approval.rs  event_fmt.rs  events.rs  fetch.rs  init.rs  mcp.rs  mcp_observability.rs  mod.rs  pipelines.rs  replay.rs  resume.rs  run.rs  runs.rs  runs_data.rs  schema.rs  serve.rs  venv.rs  verify.rs
src/cli/observe/: app.rs  data.rs  graph.rs  mod.rs  ui.rs
src/config/: agent.rs  dag.rs  error.rs  mod.rs  pipeline.rs  project.rs  template.rs  tool.rs  validate.rs  when_expr.rs
src/connectors/: context.rs  cron.rs  cursor_store.rs  file_append.rs  file_read.rs  http_inbound.rs  http_poll.rs  http_post.rs  mod.rs  registry.rs  stdio.rs  util.rs
src/engine/: mod.rs  tools.rs
src/esaa/: contracts.rs  mod.rs  orchestrator.rs  projections.rs
src/events/: bus.rs  connector.rs  mod.rs  store.rs  stream_registry.rs
src/events/store/: event_store.rs  factory.rs  mod.rs  postgres.rs  sqlite.rs  watcher.rs
src/handlers/: mod.rs  resume_pipeline.rs  run_pipeline.rs
src/llm/: anthropic.rs  error.rs  mod.rs  openai.rs
src/mcp/: connection.rs  mod.rs  registry.rs  transport.rs
src/mcp/server/: elicitation.rs  handlers.rs  link.rs  mod.rs  observability.rs  protocol.rs  reasoning.rs  tasks.rs
src/plugin/: mod.rs  registry.rs  transport.rs
src/python/: auto_discover.rs  bus.rs  event.rs  mod.rs  py_runtime.rs  store.rs  tool.rs
src/runtime/: action_executor.rs  context_builder.rs  context_window.rs  event_router.rs  mod.rs  shell_session.rs  tool_catalog.rs
src/services/: langfuse.rs  mod.rs
zymi/: __init__.py  _cli.py
zymi_core/: __init__.py  _cli.py
