[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "zymi-core"
version = "0.5.0"
description = "Event-sourced agent engine — CLI and Python bindings for auditable AI workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "metravod" }]
keywords = ["ai", "agent", "event-sourcing", "llm", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
zymi = "zymi_core._cli:main"

[project.urls]
Repository = "https://github.com/metravod/zymi-core"

[tool.maturin]
features = ["python", "cli"]
module-name = "zymi_core._zymi_core"
python-source = "."
